# llm-news-crawler

./: README.md  pyproject.toml
scripts/: check.sh  checks.sh  llm-news-crawler.sh  pre-commit
src/crawler/: __init__.py  article_fetcher.py  dedup.py  filters.py  hard_fetch.py  main.py  models.py
src/crawler/sources/: hackernews.py  playwright_blogs.py  rss_feeds.py  sitemap_blogs.py
